--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,4 @@ on:
 
 jobs:
   iac_test:
-    - uses: leonardotatsch/pipeline-templates/.github/workflows/terraform-plan.yml@main
-      with: 
-        terraform_version: '1.3.3'
-        infracost_enabled: false
-        working-directory: ${{ env.working-directory }}
+    uses: leonardotatsch/pipeline-templates/.github/workflows/terraform-plan.yml@main
