--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,8 +5,18 @@ on:
 
 jobs:
   build:
+    environment: sandbox
     uses: leonardotatsch/pipeline-templates/.github/workflows/terraform-plan.yml@main
     with:
       working-directory: "./tf"
       terraform-version: "1.3.3"
+      storage_account_name: "saiacltatschc"
+      container_name: "terraform"
+      tf_file_name: azaccelerator.tfstate
+      resource_group_name: "rg-ltatschc"
+      subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+      tenant_id: ${{ secrets.AZURE_TENANT_ID }}
+      client_id: ${{ secrets.AZURE_CLIENT_ID }}
+      client_secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+
 
