Refactor IaC test workflow in main.yml: Remove unnecessary newline at the end of the file and update environment value to "sandbox".

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,4 @@ jobs:
       tenant_id: ${{ secrets.AZURE_TENANT_ID }}
       client_id: ${{ secrets.AZURE_CLIENT_ID }}
       client_secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-      environment: "sandbox"
-
-
+      environment: sandbox
