--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,10 @@ jobs:
       terraform-version: "1.3.3"
       storage_account_name: "saiacltatschc"
       container_name: "terraform"
-      tf_file_name: azaccelerator.tfstate
+      tf_file_name: "azaccelerator.tfstate"
       resource_group_name: "rg-ltatschc"
       subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
       tenant_id: ${{ secrets.AZURE_TENANT_ID }}
       client_id: ${{ secrets.AZURE_CLIENT_ID }}
       client_secret: ${{ secrets.AZURE_CLIENT_SECRET }}
-      environment: sandbox
+      environment: "sandbox"
