--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,8 +13,8 @@ jobs:
       container_name: "terraform"
       tf_file_name: "azaccelerator.tfstate"
       resource_group_name: "rg-ltatschc"
-      subscription_id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-      tenant_id: ${{ secrets.AZURE_TENANT_ID }}
-      client_id: ${{ secrets.AZURE_CLIENT_ID }}
-      client_secret: ${{ secrets.AZURE_CLIENT_SECRET }}
+      subscription_id: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+      tenant_id: "${{ secrets.AZURE_TENANT_ID }}"
+      client_id: "${{ secrets.AZURE_CLIENT_ID }}"
+      client_secret: "${{ secrets.AZURE_CLIENT_SECRET }}"
       environment: "sandbox"
