--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,8 +15,8 @@ jobs:
       resource_group_name: "rg-ltatschc"
       environment: "sandbox"
     secrets:
-      subscription_id: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-      tenant_id: "${{ secrets.AZURE_TENANT_ID }}"
-      client_id: "${{ secrets.AZURE_CLIENT_ID }}"
-      client_secret: "${{ secrets.AZURE_CLIENT_SECRET }}"
+      AZURE_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
+      AZURE_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
+      AZURE_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
+      AZURE_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
     #secrets: inherit
