--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
       resource_group_name: "rg-ltatschc"
       environment: "sandbox"
       tf_apply: false
-      tf_destroy: true
+      tf_destroy: false
     secrets:
       AZURE_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
       AZURE_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
