Refactor IaC test workflow: Update tf_apply and tf_destroy variables and add infracost_enabled variable

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,9 +16,10 @@ jobs:
       environment: "sandbox"
       tf_apply: false
       tf_destroy: false
+      infracost_enabled: false #Needs to set INFRACOST_API_KEY secret when true
     secrets:
       AZURE_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
       AZURE_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
       AZURE_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
       AZURE_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
-    #secrets: inherit
+      INFRACOST_API_KEY: null
