Refactor main.yml: Update tf_apply value to true

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       tf_file_name: "azaccelerator.tfstate"
       resource_group_name: "rg-ltatschc"
       environment: "sandbox"
-      tf_apply: false
+      tf_apply: true
       tf_destroy: false
       infracost_enabled: false #Needs to set INFRACOST_API_KEY secret when true
     secrets:
