Refactor main.yml: Update tf_apply and tf_destroy values

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,8 +14,8 @@ jobs:
       tf_file_name: "azaccelerator.tfstate"
       resource_group_name: "rg-ltatschc"
       environment: "sandbox"
-      tf_apply: true
-      tf_destroy: false
+      tf_apply: false
+      tf_destroy: true
       infracost_enabled: false #Needs to set INFRACOST_API_KEY secret when true
     secrets:
       AZURE_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
